# open-postal-codes

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: data-refresh.yml  pages.yml  pull-request.yml
data/sources/: geofabrik-regions.json
docs/adr/: 0001-define-python-first-project-boundary.md  0002-define-data-layout-and-static-api.md  0003-publish-through-github-pages.md  0004-preserve-odbl-and-visible-attribution.md  0005-keep-ci-and-maintenance-low-cost.md  0006-defer-osm-extraction-dependencies.md  0007-extract-germany-post-codes-from-geofabrik-regions.md  0008-extend-v1-post-code-quality-metadata.md  0009-extend-v1-to-dach-post-code-data.md  0010-add-state-to-v1-post-code-data.md  0011-add-maintainability-guardrails.md  0012-balance-repository-hardening-with-solo-maintenance.md  0013-automate-data-refresh-pull-request-merge.md  0014-resilient-regional-data-refresh.md  README.md
docs/architecture/: repository-structure.md  static-api.md
docs/contracts/: CURRENT.md  README.md
docs/ops/: data-refresh.md  development-checks.md  github-pages-publication.md  maintainer-scorecard.md  release-readiness.md  rollback.md
docs/plans/: PLANS-001-initialize-repository-foundation.md  PLANS-002-germany-post-code-extraction.md  PLANS-003-dach-post-code-expansion.md  PLANS-004-state-and-business-central-export.md  PLANS-005-maintainability-guardrails.md  PLANS.md  (+3 more)
site/: 404.html  index.html
tests/: __init__.py
(+82 files in other folders)
